--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -114,7 +114,7 @@
                                             <th><span class="letra-titulo">#{administracion['catalogoadministrativo.school.table.active']}</span></th>
                                             <th><span class="letra-titulo">#{administracion['catalogoadministrativo.school.table.licenses']}</span></th>
                                             <th><span class="letra-titulo">#{administracion['catalogoadministrativo.school.table.remaining.days']}</span></th>
-                                            <th><span class="letra-titulo ">#{etiqueta['options']}</span></th>
+                                            <th><span class="letra-titulo ">#{administracion['title.all.tables.column.options']}</span></th>
                                         </tr>
                                     </thead>
                                     <tbody>
